# gorske

./: Cargo.toml  README.md  index.html  index.scss
.github/workflows/: generate_artefact.yml  pr_check.yml
src/: app.rs  gorske.rs  main.rs  text_input.rs
