[package]
name = "gorske-calculator"
version = "0.1.0"
edition = "2021"
description = "Calculate the relative cost of time wasting activities using the Gorske Unit"
readme = "README.md"
repository = "https://github.com/pentesterwtf/gorske"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19.3"
web-sys = { version = "0.3.64", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2.87"
numsep = "0.1.12"
